# aduanmy

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.production.txt
.github/: pull_request_template.md
app/: main.py
configs/: categories.yaml  discovery.yaml  entities.yaml  gtfs.yaml  locations.yaml  queries.yaml  seed_urls.yaml  sources.yaml  transport_updates.yaml
docs/: AI_REVIEW_PROMPTS.md  ARCHITECTURE.md  HANDOFF_FOR_REVIEW.md  IDEAS_STOLEN.md  LAUNCH_X.md  MALAYSIA_TRANSPORT_REFERENCE.md  OPEN_SOURCE_STACK.md  PRODUCTION_AUDIT_2026-06-30.md  PRODUCT_RESEARCH.md  TASTE.md  THREADS_TERMINAL.md  UI_AUDIT.md
scripts/: audit_sources.py  build_line_svgs.py  build_manus_zip.py  build_rail_geojson.py  build_threads_terminal_zip.py  deploy_do.py  deploy_packaging.py  eval_harness.py  evaluate_category_scores.py  export_decision_memo.py  fix_js_encoding.py  gen_brand_assets.py  generate_trend_report.py  install_stitch_route_diagrams.py  prune_prod_gtfs.py  prune_prod_rejected.py  renew_threads_session_prod.py  run_full_sample.py  run_official_sample.py  run_reddit_sample.py  run_snapshot.py  run_threads_sample.py  run_x_sample.py  scraper_qa_live.py  threads_terminal.py  threads_terminal_web.py  trigger_prod_ingest.py
static/: developers.html  embed.html  index.html  manifest.webmanifest  methodology.html  status.html  sw.js
stitch-export/: STITCH_BRIEF.md  trafficmy-ui.html
stitch-pack/: SCRAPER_AUDIT.md  STITCH_BRIEF.md  index.html
tests/: conftest.py  test_bus_alerts.py  test_config_service.py  test_date_hints.py  test_db_session.py  test_deploy_script.py  test_fare_service.py  test_freshness.py  test_geo.py  test_gtfs_collector.py  test_incidents.py  test_ingest_service.py  test_journey_service.py  test_line_history.py  test_line_reference.py  test_line_status_service.py  test_malaysia_journey_hints.py  test_malaysia_transport_scope.py  test_map_geometry.py  test_map_live.py  test_normalize.py  test_official_collector.py  test_routes.py  (+12 more)
(+105 files in other folders)
