[project]
name = "aduanmy"
version = "0.1.0"
description = "Malaysia-first public complaint intelligence engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "requests>=2.32.0",
  "PyYAML>=6.0.0",
  "beautifulsoup4>=4.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "starlette>=0.47.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
