[project]
name = "aduanmy"
version = "0.2.0"
description = "TrafficMY — live Malaysia transit rider signals (today MYT). Quiet ≠ all-clear."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "requests>=2.32.0",
  "PyYAML>=6.0.0",
  "beautifulsoup4>=4.13.0",
  "gtfs-realtime-bindings>=1.0.0",
  "playwright==1.49.0",
  "tzdata>=2024.1; platform_system=='Windows'",
]

[project.scripts]
threads-terminal = "scripts.threads_terminal:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "starlette>=0.47.0",
  "httpx>=0.27.0",
  "rich>=13.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
